--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
+    <div class="container">
+      <div class="card__container">
+        <img class="hero" src="./static/images/image-qr-code.png" alt="Hero" />
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+        <h2 class="title">
+          Improve your front-end skills by building projects
+        </h2>
+        <p class="paragraph">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
     </div>
   </body>
 </html>
